crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__helpers__templatetags__captureas.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/helpers/templatetags/captureas.py
---
tag_rules: {}
filter_arities: {}
block_specs:
  "src.pretix.helpers.templatetags.captureas::tag::captureas":
    end_tag: endcaptureas
    intermediates: []
    opaque: false
