crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__helpers__templatetags__date_fast.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/helpers/templatetags/date_fast.py
---
tag_rules: {}
filter_arities:
  "src.pretix.helpers.templatetags.date_fast::filter::date_fast":
    expects_arg: true
    arg_optional: true
block_specs: {}
