crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__helpers__templatetags__simple_block_tag.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/helpers/templatetags/simple_block_tag.py
---
tag_rules: {}
filter_arities: {}
block_specs: {}
