crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__helpers__templatetags__thumb.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/helpers/templatetags/thumb.py
---
tag_rules: {}
filter_arities:
  "src.pretix.helpers.templatetags.thumb::filter::thumb":
    expects_arg: true
    arg_optional: false
block_specs: {}
